--- a/01-intro/homework/homework.ipynb
+++ b/01-intro/homework/homework.ipynb
@@ -57,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the data\n",
     "df = pd.read_parquet('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet')"
    ]
   },
